#60 - refactor : [BE] GoodsService 수정